--- a/views/pages/adminDash.ejs
+++ b/views/pages/adminDash.ejs
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="/css/new_categories.css" type="text/css">
      <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Admin</title>
+     <title>Admin Dashboard</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
      <link rel="stylesheet" href="/css/styles.css" type="text/css">
